--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,9 @@
 <footer class="footer">
   <div class="container">
 
-    {% include subscribe.html %}
-    
-    {% include instagram.html %}
-
     {% include contact-link.html %}
 
-    <div class="copyright">Copyright &copy; {{site.time | date: '%Y'}} <a href="/">{{ site.data.settings.title }}</a> — All right Reserved. Power by <a href="https://jekyllrb.com/">Jekyll</a>.</div>
+    <div class="copyright">Copyright &copy; {{site.time | date: '%Y'}} <a href="/">Ho Art Craft</a> — All right Reserved.</div>
 </div>
 </footer>
 <!-- end footer -->
